--- a/index.html
+++ b/index.html
@@ -7,105 +7,138 @@
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background-color: #f4f4f4;
-            color: #333;
             margin: 0;
             padding: 0;
+            background-color: #f5f5f5;
         }
         header {
             background-color: #4CAF50;
-            color: white;
-            padding: 15px 20px;
+            padding: 20px;
             text-align: center;
+            color: white;
         }
-        nav ul {
+        nav {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            background-color: #333;
+            padding: 10px 0;
+        }
+        nav a {
+            color: white;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        section {
+            max-width: 1000px;
+            margin: 20px auto;
+            background: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
+        h2 {
+            color: #4CAF50;
+            margin-top: 0;
+        }
+        ul {
             list-style: none;
             padding: 0;
         }
-        nav ul li {
-            display: inline;
-            margin-right: 20px;
-        }
-        section {
-            padding: 20px;
-            max-width: 800px;
-            margin: auto;
-            background: white;
-            box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
-            margin-top: 20px;
-        }
-        h1, h2, h3 {
-            color: #4CAF50;
+        ul li {
+            padding: 8px 0;
+            border-bottom: 1px solid #eee;
         }
         footer {
             text-align: center;
             padding: 10px;
+            background-color: #333;
+            color: white;
+            margin-top: 20px;
+        }
+        .btn {
+            display: inline-block;
+            padding: 10px 20px;
             background-color: #4CAF50;
             color: white;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-        .contact-info {
-            background: #eee;
-            padding: 10px;
             border-radius: 5px;
+            text-decoration: none;
+            margin-top: 10px;
+        }
+        .hero {
+            background-color: #333;
+            color: white;
+            padding: 40px 20px;
+            text-align: center;
+            border-radius: 8px;
+        }
+        .contact-info p {
+            margin: 5px 0;
         }
     </style>
 </head>
 <body>
 
 <header>
-    <h1>Ankith M - Portfolio</h1>
+    <h1>Ankith M</h1>
+    <p>Full Stack Developer | Java | Spring Boot | React.js | AWS | Kubernetes</p>
 </header>
 
-<section>
-    <h2>Contact Information</h2>
-    <div class="contact-info">
-        <p>Email: ankith.b888@gmail.com</p>
-        <p>Phone: +1 9136387183</p>
-    </div>
+<nav>
+    <a href="#about">About</a>
+    <a href="#skills">Skills</a>
+    <a href="#experience">Experience</a>
+    <a href="#education">Education</a>
+    <a href="#contact">Contact</a>
+</nav>
 
+<section id="about">
+    <h2>About Me</h2>
+    <p>Hi! I'm Ankith M, a passionate Full Stack Developer with experience in building scalable web applications and microservices. I'm skilled in both frontend and backend development, utilizing modern technologies to create efficient, user-friendly solutions.</p>
+</section>
+
+<section id="skills">
     <h2>Technical Skills</h2>
     <ul>
-        <li><strong>Programming:</strong> Java, Python, SQL, Groovy, Scala, Shell Scripts, PIG Latin, TypeScript, Ruby, C/C++</li>
-        <li><strong>Frameworks:</strong> Spring Boot, Spring MVC, Hibernate, MyBatis, JSP, Kafka, Docker, Kubernetes, Flask, Django, Express.js, React.js, Vue.js</li>
-        <li><strong>Web Development:</strong> HTML, CSS, JavaScript, AngularJS, React.js, Vue.js, jQuery, Bootstrap, Node.js, Express.js</li>
-        <li><strong>Cloud / DevOps:</strong> AWS, GCP, Azure, Jenkins, GitHub Actions, Terraform, Ansible, Kubernetes</li>
-        <li><strong>Databases:</strong> PostgreSQL, MySQL, MongoDB, DynamoDB, Cassandra, Oracle, IBM DB2, Redis, Firebase, Snowflake</li>
-        <li><strong>Security:</strong> OAuth2, JWT, SAML, LDAP, Cybersecurity Best Practices, OWASP</li>
-        <li><strong>Testing:</strong> JUnit, Mockito, Selenium, Cypress, LoadRunner, JMeter, Postman API Testing, TestNG, Cucumber</li>
-        <li><strong>Big Data:</strong> Apache Spark, Hadoop, HDFS, Hive, Kafka Streams, Airflow, EMR, Databricks</li>
+        <li><strong>Programming:</strong> Java, Python, SQL, Groovy, Scala, Shell Scripts, TypeScript, C/C++</li>
+        <li><strong>Frameworks:</strong> Spring Boot, Hibernate, Flask, Django, Express.js, React.js, Vue.js</li>
+        <li><strong>Web Development:</strong> HTML, CSS, JavaScript, AngularJS, Bootstrap, Node.js</li>
+        <li><strong>Cloud / DevOps:</strong> AWS, GCP, Azure, CI/CD, Kubernetes</li>
+        <li><strong>Databases:</strong> PostgreSQL, MySQL, MongoDB, Redis, Snowflake</li>
     </ul>
+</section>
 
+<section id="experience">
     <h2>Experience</h2>
     <h3>Velocity Portfolio Group (Sep 2023 – Present)</h3>
     <p>Full Stack Java Developer | NJ, United States</p>
     <ul>
-        <li>Architected microservices in Spring Boot with Kafka, optimizing real-time data processing.</li>
+        <li>Architected microservices in Spring Boot with Kafka for real-time data processing.</li>
         <li>Built scalable front-end solutions using React.js and AngularJS.</li>
-        <li>Designed and managed CI/CD pipelines using Jenkins, GitHub Actions, and Kubernetes.</li>
+        <li>Designed CI/CD pipelines reducing production errors by 70%.</li>
     </ul>
 
     <h3>Ariqt International (Mar 2019 – Jul 2021)</h3>
     <p>Full Stack Java Developer | Hyderabad, India</p>
     <ul>
-        <li>Developed a recommendation system using Spring Boot and Spark MLlib.</li>
-        <li>Built scalable cloud-native machine learning pipelines on AWS EMR.</li>
+        <li>Developed recommendation systems using Spark MLlib and AWS EMR.</li>
         <li>Optimized microservices and RESTful APIs in Kubernetes environments.</li>
     </ul>
+</section>
 
-    <h3>Strobes Security Inc (July 2017 – Feb 2019)</h3>
-    <p>Full Stack Java Developer | Hyderabad, India</p>
-    <ul>
-        <li>Led development of enterprise-grade microservices using Spring Boot and JPA.</li>
-        <li>Developed RESTful APIs with JAX-RS and Jersey for large-scale apps.</li>
-        <li>Enhanced DevOps processes using Maven and Jenkins CI/CD pipelines.</li>
-    </ul>
-
+<section id="education">
     <h2>Education</h2>
     <p><strong>University of Central Missouri, USA</strong></p>
     <p>Masters in Computer Science, GPA: 3.14/4.0, May 2023</p>
+</section>
+
+<section id="contact">
+    <h2>Contact Me</h2>
+    <div class="contact-info">
+        <p>Email: <a href="mailto:ankith.b888@gmail.com">ankith.b888@gmail.com</a></p>
+        <p>Phone: +1 9136387183</p>
+    </div>
+    <a href="mailto:ankith.b888@gmail.com" class="btn">Send a Message</a>
 </section>
 
 <footer>
