--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 </section>
 
 <footer>
-    <p>&copy; 2025 Ankith M. All Rights Reserved.</p>
+    <p>&copy; 2025 Ankith B. All Rights Reserved.</p>
 </footer>
 
 </body>
