--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 <body>
 
 <header>
-    <h1>Ankith M</h1>
+    <h1>Ankith B</h1>
     <p>Full Stack Developer | Java | Spring Boot | React.js | AWS | Kubernetes</p>
 </header>
 
@@ -123,7 +123,7 @@
 
 <section id="about">
     <h2>About Me</h2>
-    <p>Hi! I'm Ankith M, a dedicated Full Stack Developer with a passion for developing scalable, efficient, and intuitive applications. I specialize in creating seamless user experiences and leveraging modern technologies to drive innovation.</p>
+    <p>Hi! I'm Ankith B, a dedicated Full Stack Developer with a passion for developing scalable, efficient, and intuitive applications. I specialize in creating seamless user experiences and leveraging modern technologies to drive innovation.</p>
 </section>
 
 <section id="skills">
